'Css' path case-sensitivity fix
Didn’t show css because of case-sensitivity.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Forms</title>
+    <title>Robin Westerhoff's Forms</title>
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="Css/style.css">
@@ -19,8 +19,6 @@
             <p>Get the latest news on how your code is doing right in your inbox</p>
         </section>
         <form class="form-wrapper" action="index.html" method="post">
-        <!-- See line above for the correct input, the line below is for prevent -->
-        <!-- <form class="form-wrapper" action="" method=""> -->
             <fieldset class="form-fieldset">
                 <legend>Contact Information</legend>
                 <div id="contact-group" class="grid-container">
