Added foo-logo in footer.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     </main>
     <footer class="page-footer">
         <p>Copyright The Code Review</p>
+        <img src="../Images/icon-code.svg" alt="Codereview Logo" class="footer-logo">
     </footer>
 </body>
 
