Removed validation-styling for now.
As this is too much in your face, would be cool to add this only on
submit. Because I don’t have the knowledge yet I will add that later.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <textarea name="other-topics" id="other-topics"></textarea>
                 </div>
             </fieldset>
-            <input type="submit" value="Sign Up">
+            <input id="button-submit" type="submit" value="Sign Up">
         </form>
     </main>
     <footer class="page-footer">
