--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Robin Westerhoff's Forms</title>
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="Css/normalize.css">
     <link rel="stylesheet" href="Css/style.css">
 </head>
 
@@ -23,33 +24,45 @@
                 <legend>Contact Information</legend>
                 <div id="contact-group" class="grid-container">
                     <div id="personal-info" class="row">
-                        <label for="full-name">Full Name</label>
-                        <input type="text" name="full-name" id="full-name" placeholder="Required" class="required" required>
+                        <label for="user-full-name">Full Name</label>
+                        <input type="text" name="user-full-name" id="user-full-name" placeholder="Required" class="required" required  pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="firstname lastname">
                         <br>
-                        <label for="email">Email Address</label>
-                        <input type="email" name="email" id="email" placeholder="Required" class="required" required>
+                        <label for="user-email">Email Address</label>
+                        <input type="email" name="user-email-address" id="user-email" placeholder="Required" class="required" required  title="name@email.com">
                         <br>
-                        <label for="phone">Phone Number</label>
-                        <input type="tel" name="phone" id="phone">
+                        <label for="user-phone">Phone Number</label>
+                        <input type="tel" name="user-phone-number" id="user-phone" pattern="[\+]\d{2}\d{9}" title="+31 12 345 67 89">
                         <br>
-                        <label for="date-of-birth">Date of Birth</label>
-                        <input type="date" name="date-of-birth" id="date-of-birth">
+                        <label for="user-member-date">Member since</label>
+                        <input type="date" name="user-member-since" id="user-member-date">
                         <br>
                     </div>
                     <div id="habitat-info" class="row">
-                        <label for="street-address">Street Address</label>
-                        <input type="text" name="street-address" id="street-address">
+                        <label for="habitat-street-address">Street Address</label>
+                        <input type="text" name="habitat-street-address" id="habitat-street-address" pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="streetname number">
                         <br>
-                        <label for="city">City</label>
-                        <input type="text" name="city" id="city">
+                        <label for="habitat-city">City</label>
+                        <input type="text" name="habitat-city" id="habitat-city">
                         <br>
-                        <label for="state">State</label>
-                        <select name="state" id="state">
-                            <option value="choose-state" disabled>Choose State</option>
+                        <label for="habitat-state">State</label>
+                        <select name="habitat-state" id="habitat-state">
+                            <option value="choose-state">Choose State</option>
+                            <option value="groningen">Groningen</option>
+                            <option value="friesland">Friesland</option>
+                            <option value="drenthe">Drenthe</option>
+                            <option value="noord-holland">Noord-Holland</option>
+                            <option value="flevoland">Flevoland</option>
+                            <option value="overijssel">Overijssel</option>
+                            <option value="gelderland">Gelderland</option>
+                            <option value="utrecht">Utrecht</option>
+                            <option value="zuid-holland">Zuid-Holland</option>
+                            <option value="zeeland">Zeeland</option>
+                            <option value="noord-brabant">Noord-Brabant</option>
+                            <option value="limburg">Limburg</option>
                         </select>
                         <br>
-                        <label for="zip-code">Zip Code</label>
-                        <input type="text" name="zip-code" id="zip-code" placeholder="Required" class="required" required>
+                        <label for="habitat-zip-code">Zip Code</label>
+                        <input type="text" name="habitat-zip-code" id="habitat-zip-code" placeholder="Required" class="required" required  pattern="[1-9][0-9]{3}\s?[a-zA-Z]{2}" title="1234AB">
                     </div>
                 </div>
             </fieldset>
@@ -57,26 +70,24 @@
                 <legend>Newsletter</legend>
                 <div id="newsletter-group" class="grid-container">
                     <div id="checkbox-group" class="row">
-                        <label>Select the newsletters you would like to receive</label>
-                        <br>
-                        <input type="checkbox" id="html-news" value="html-news">
+                        <p class="descriptive-label">Select the newsletters you would like to receive</p>
+                        <input type="checkbox" id="html-news" name="newsletter-preferred" value="html-news">
                         <label for="html-news">HTML News</label>
                         <br>
-                        <input type="checkbox" id="css-news" value="css-news">
+                        <input type="checkbox" id="css-news" name="newsletter-preferred" value="css-news">
                         <label for="css-news">CSS News</label>
                         <br>
-                        <input type="checkbox" id="js-news" value="js-news">
+                        <input type="checkbox" id="js-news" name="newsletter-preferred" value="js-news">
                         <label for="js-news">Javascript News</label>
                         <br>
                         <br>
                     </div>
                     <div id="radio-group" class="row">
-                        <label>Newsletter format</label>
-                        <br>
-                        <input type="radio" name="newsletter-format" id="html">
+                        <p class="descriptive-label">Newsletter format</p>
+                        <input type="radio" id="html" name="newsletter-format" value="html">
                         <label for="html">HTML</label>
                         <br>
-                        <input type="radio" name="newsletter-format" id="plain-txt">
+                        <input type="radio" id="plain-txt" name="newsletter-format" value="plain-text">
                         <label for="plain-txt">Plain text</label>
                         <br>
                         <br>
