Added a README file.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <p>Copyright The Code Review</p>
         <img src="Images/icon-code.svg" alt="Codereview Logo" class="footer-logo">
     </footer>
+    <script src="Js/submit.js"></script>
 </body>
 
 </html>
